Closed Bug 298477 Opened 21 years ago Closed 21 years ago

relatedTarget is never set for mouseover event

Categories

(Core :: DOM: Events, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mossop, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: regression, testcase)

Attachments

(3 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050622 Firefox/1.0+ Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050622 Firefox/1.0+ mouseover events never have the relatedTarget set making it impossible to determine where the mouse came from Reproducible: Always Steps to Reproduce: 1. Open the upcoming testcase. 2. Move mouse around document. Actual Results: The input box showing the relatedTarget for mouseout events updates fine while the one for mouseover events always show [null]. Expected Results: The relatedTarget for mouseover events should be the DOM node that the mouse came from. This is a regression, the test case appears to work, in firefox 1.0.4, though it has some problems there for some reason.
Attached file testcase —
Note that I do not believe this is a duplicate of bug 112553. There the relatedTarget is set in all but a few cases, here its all the time, also there the mouseout event is similarly affected while here it isnt.
Flags: blocking-aviary1.1-
Fixing accidentally changed flag, apologies for the spam
Flags: blocking-aviary1.1-
Tracked regression point to between the builds from 28th March and 29th March. This points to the fix for bug 284664.
Keywords: regression
Attached file testcase 2 —
This is an alternate testcase that logs what the mouseover and mouseevents think is happening to the mouse pointer. Move the mouse over the table below the text boxes to see logs of the events.
Assignee: events → roc
Status: UNCONFIRMED → NEW
Depends on: 284664
Ever confirmed: true
Flags: blocking1.8b4?
Flags: blocking-aviary1.1+
Keywords: testcase
Assignee: roc → mats.palmgren
Blocks: 284664
No longer depends on: 284664
OS: Windows XP → All
Attached patch Patch rev. 1 — — Splinter Review
I have tested all URLs/testcases linked to via bug 284664 too and I didn't see any regressions by this patch.
Attachment #187080 - Flags: superreview?(roc)
Attachment #187080 - Flags: review?(roc)
Comment on attachment 187080 [details] [diff] [review] Patch rev. 1 major DHTML regression
Attachment #187080 - Flags: superreview?(roc)
Attachment #187080 - Flags: superreview+
Attachment #187080 - Flags: review?(roc)
Attachment #187080 - Flags: review+
Attachment #187080 - Flags: approval1.8b3?
This patch fixes the bug for me
Attachment #187080 - Flags: approval1.8b3? → approval1.8b3+
Dave, thanks for the excellent bug report! Checked in on trunk at 2005-06-24 18:32 PDT -> FIXED
Status: NEW → RESOLVED
Closed: 21 years ago
Flags: blocking1.8b4?
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: