Fix event.relatedTarget for MouseOver events. b=298477 r+sr=roc a=asa